--- a/package.json
+++ b/package.json
@@ -15,15 +15,16 @@
   "license": "AGPL-3.0",
   "author": "SKALE Labs and contributors",
   "scripts": {
-    "build": "rm -r ./build; npx truffle build",
-    "compile": "npx truffle compile && cp build/contracts/Context.json predeployed/context_predeployed/artifacts",
+    "compile": "npx hardhat clean && npx hardhat compile",
     "lint": "npx ethlint -d contracts",
     "lint-fix": "npm run lint -- --fix",
     "slither": "slither . --filter-path strings --filter-path Migrations",
     "version": "node -e \"console.log(require('./package.json').version);\""
   },
   "devDependencies": {
-    "truffle": "5.1.30"
+      "hardhat": "^2.6.4",
+      "ts-node": "^10.2.1",
+      "typescript": "^4.4.3"
   },
   "publishConfig": {
     "access": "public"
