--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
           node-version: 14
       - name: Install dependencies
         run: |
-          npm i
+          yarn install
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
@@ -22,6 +22,7 @@ jobs:
       - name: Compile with truffle
         run: |
           npm run compile
+          python predeployed/scripts/generate_artifacts.py
       - name: Install geth
         run: |
           sudo add-apt-repository -y ppa:ethereum/ethereum
